--- a/index.html
+++ b/index.html
@@ -34,6 +34,14 @@
   js.src = 'https://connect.facebook.net/hr_HR/sdk.js#xfbml=1&version=v2.11';
   fjs.parentNode.insertBefore(js, fjs);
 }(document, 'script', 'facebook-jssdk'));</script>
+		<div id="fb-root"></div>
+<script>(function(d, s, id) {
+  var js, fjs = d.getElementsByTagName(s)[0];
+  if (d.getElementById(id)) return;
+  js = d.createElement(s); js.id = id;
+  js.src = 'https://connect.facebook.net/hr_HR/sdk.js#xfbml=1&version=v2.11';
+  fjs.parentNode.insertBefore(js, fjs);
+}(document, 'script', 'facebook-jssdk'));</script>
 		<div class="container">
 			<div class="row">
 				<div class="col-xs-12 header">
@@ -59,6 +67,7 @@
 					<div class="col-xs-12 col-sm-6 image-container">
 						<img src="img/img01-thumb.jpg">
 						<div class="overlay">
+							<div class="fb-like" data-href="https://developers.facebook.com/docs/plugins/" data-layout="standard" data-action="like" data-size="small" data-show-faces="true" data-share="true"></div>
 							<p><a href="img/img01.jpg" data-lightbox="g1">Opis slike</a></p>
 						</div>
 					</div>
