--- a/index.html
+++ b/index.html
@@ -67,8 +67,7 @@
 					<div class="col-xs-12 col-sm-6 image-container">
 						<img src="img/img01-thumb.jpg">
 						<div class="overlay">
-							<div class="fb-like" data-href="https://developers.facebook.com/docs/plugins/" data-layout="standard" data-action="like" data-size="small" data-show-faces="true" data-share="true"></div>
-							<p><a href="img/img01.jpg" data-lightbox="g1">Opis slike</a></p>
+							<p><a href="img/img01.jpg" data-lightbox="g1">Opis slike</a><div class="fb-like" data-href="https://developers.facebook.com/docs/plugins/" data-layout="standard" data-action="like" data-size="small" data-show-faces="true" data-share="true"></div></p>
 						</div>
 					</div>
 					<div class="col-xs-12 col-sm-6 image-container">
