--- a/index.html
+++ b/index.html
@@ -129,6 +129,8 @@
 				$('.main-menu').slideToggle();
 			});
 		</script>
-		
+		<!-- Go to www.addthis.com/dashboard to customize your tools -->
+<script type="text/javascript" src="//s7.addthis.com/js/300/addthis_widget.js#pubid=ra-5a6a09b90ab94e17"></script>
+
 	</body>
 </html>
